# TestXmlsJoiner

./: .gitignore  CMakeLists.txt  README.md
cmake/: buildFiles.cmake  code_coverage.cmake  code_coverage_xml.cmake  compileroptions.cmake  config.cmake.in  dox.in  findDependencies.cmake  generateDoc.cmake  options.cmake  printInfo.cmake  versions.cmake
data/: gtests.xml  qtests.xml  valgrind.supp
include/: TestsReader.h  Types.h  XmlJoiner.h  doc.h
src/: CMakeLists.txt  Types.cpp  XmlJoiner.cpp
tests/: CMakeLists.txt  TestXmlJoiner.cpp  tests_main.cpp
utils/: CMakeLists.txt  test_all.cpp  xml_join.cpp
