INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

FILE(GLOB SRCS "*.cpp")
FILE(GLOB HDRS "../include/*.h")

ADD_LIBRARY(${PROJECT_NAME} ${SRCS} ${HDRS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
  VERSION ${VERSION}
  SOVERSION ${SOVERSION}
  CLEAN_DIRECT_OUTPUT 1
  OUTPUT_NAME "${PROJECT_NAME}")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt4::QtCore)

INSTALL(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin COMPONENT main
  LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE
   OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE COMPONENT main
  ARCHIVE DESTINATION lib COMPONENT main)
